# ledgeline

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: ci.yml
assets/: Info.plist.in
crates/ledgeline-core/: Cargo.toml
crates/ledgeline-core/src/: decimal.rs  edit.rs  lib.rs  model.rs  parse.rs  wire.rs
crates/ledgeline-core/src/holdings/: commodities.rs  engine.rs  mod.rs  series.rs  test_helpers.rs  types.rs
crates/ledgeline-core/src/reports/: account_types.rs  accounts.rs  aggregate.rs  balance_sheet.rs  budget.rs  cash_flow.rs  income_statement.rs  mixed_amount.rs  mod.rs  net_worth.rs  periods.rs  prices.rs  sections.rs  test_support.rs  types.rs
crates/ledgeline-core/tests/: budget_golden.rs  corpus.rs  edit.rs  endpoints_parity.rs  holdings.rs  reports_golden.rs  transactions_parity.rs
crates/ledgeline-core/tests/common/: mod.rs
crates/ledgeline-server/: Cargo.toml  build.rs
crates/ledgeline-server/src/: edit_api.rs  gui.rs  lib.rs  main.rs  recents.rs  reports_api.rs  spa.rs
crates/ledgeline-server/tests/: edit_endpoints.rs  holdings_endpoints.rs  report_endpoints.rs  server_endpoints.rs
crates/ledgeline-server/tests/common/: mod.rs
docs/: development.md
fixtures/: sample.journal
fixtures/api/v1.52/: accountnames.json  accounts.json  commodities.json  prices.json  transactions.json  version.json
fixtures/budget/: HLEDGER_VERSION  basic.budget.json  basic.budget.txt  basic.journal  descpat-grocer.budget.json  descpat-grocer.budget.txt  descpat-housing.budget.json  descpat-housing.budget.txt  descpat.journal  parents.budget.json  parents.budget.txt  parents.journal  unbudgeted.budget.json  unbudgeted.budget.txt  unbudgeted.journal  weekly.budget.json  weekly.budget.txt  weekly.journal
fixtures/corpus/: account-directive.journal  account-directive.print.json  account-types.journal  account-types.print.json  amounts-commodities.journal  amounts-commodities.print.json  assertions-total.journal  assertions-total.print.json  assertions.journal  assertions.print.json  balanced-virtual-postings.journal  balanced-virtual-postings.print.json  blank-description.journal  blank-description.print.json  comments.journal  comments.print.json  commodity-directive.journal  commodity-directive.print.json  commodity-tags.journal  commodity-tags.print.json  commodityless-amounts.journal  commodityless-amounts.print.json  costs-total.journal  costs-total.print.json  costs-unit.journal  costs-unit.print.json  dates.journal  dates.print.json  decimal-mark.journal  decimal-mark.print.json  default-commodity.journal  default-commodity.print.json  inferred-commodity-style.journal  inferred-commodity-style.print.json  numbers-leading-decimal.journal  numbers-leading-decimal.print.json  numbers-no-integer-part.journal  numbers-no-integer-part.print.json  numbers-omitted-decimals.journal  numbers-omitted-decimals.print.json  (+24 more)
fixtures/corpus/errors/: date-trailing-star.journal  incomplete-date.journal  invalid-date-bigday.journal  invalid-date-flipped.journal  multiple-elided.journal  no-digits-amount.journal
fixtures/golden/: bs-d1.json  bs-d3.json  cf-monthly.json  is-d2.json  networth-d5.json  networth-spot.json
plans/: 00-overview.md  01-scaffold.md  02-domain-api.md  03-journal-view.md  04-filter-bar.md  05-insights-charts.md  06-reports-engine.md  07-reports-ui.md  08-background-checks.md  09-fixtures-testing.md  10-stock-holdings.md
scripts/: gen-budget-golden.sh  gen-corpus.sh  gen-golden.sh  snapshot-api.sh
web/: .prettierrc  README.md  eslint.config.js  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
web/e2e/: holdings.e2e.ts  shell.e2e.ts  smoke.e2e.ts
web/src/: app.css  app.html
web/src/lib/: smoke.spec.ts
web/src/lib/api/: client.test.ts  client.ts  editMapping.test.ts  editMapping.ts  live.integration.test.ts  native.test.ts  native.ts  nativeDecode.test.ts  nativeDecode.ts  nativeLive.integration.test.ts  normalize.test.ts  normalize.ts  types.raw.ts
web/src/lib/checks/: ProblemsBadge.svelte  ProblemsDrawer.svelte  engine.ts  fixture.test.ts  rules.test.ts  rules.ts  stock-rules.test.ts
web/src/lib/components/: ServerSetupModal.svelte
web/src/lib/domain/: accountTypes.test.ts  accountTypes.ts  accounts.test.ts  accounts.ts  aggregate.test.ts  aggregate.ts  money.test.ts  money.ts  types.ts
web/src/lib/export/: xlsx.test.ts  xlsx.ts
web/src/lib/filters/: AccountTreeSelect.svelte  DateRangePicker.svelte  FilterBar.svelte  SearchInput.svelte  treeSelect.test.ts  treeSelect.ts  urlCodec.test.ts  urlCodec.ts  urlSync.ts
web/src/lib/holdings/: commodities.test.ts  commodities.ts  engine.test.ts  engine.ts  purity.test.ts  series.test.ts  series.ts  test-helpers.ts  types.ts
web/src/lib/holdings/ui/: GainersLosers.svelte  HoldingsPie.svelte  HoldingsStats.svelte  HoldingsTable.svelte  HoldingsTrend.svelte  ScopeBar.svelte  gainPeriod.test.ts  gainPeriod.ts  urlCodec.test.ts  urlCodec.ts  urlSync.ts  view.test.ts  view.ts
web/src/lib/insights/: BigNumbers.svelte  ChartWidget.svelte  DepthSlider.svelte  InsightsPanel.svelte  series.test.ts  series.ts
web/src/lib/journal/: AccountsCell.svelte  AmountCell.svelte  ColumnMenu.svelte  CommentIndicator.svelte  StatusBadge.svelte  StatusCell.svelte  TotalsFooter.svelte  TransactionRow.svelte  TransactionTable.svelte  rowModel.test.ts  rowModel.ts
web/src/lib/reports/: balanceSheet.test.ts  balanceSheet.ts  budgetSummary.test.ts  budgetSummary.ts  cashFlow.test.ts  cashFlow.ts  golden.test.ts  incomeStatement.test.ts  incomeStatement.ts  netWorth.test.ts  netWorth.ts  periods.test.ts  periods.ts  prices.test.ts  prices.ts  purity.test.ts  sections.ts  test-helpers.ts  types.ts
web/src/lib/stores/: editing.svelte.ts  filters.svelte.ts  filters.test.ts  holdings.svelte.ts  holdings.test.ts  journal.svelte.ts  journal.test.ts  problems.svelte.ts  reports.svelte.ts  settings.svelte.ts
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/src/routes/holdings/: +page.svelte
web/src/routes/reports/: +page.svelte
(+14 files in other folders)
