[package]
name = "ledgeline-core"
description = "Ledgeline journal engine: hledger journal parser, exact-decimal model, reports."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
